[gd_scene load_steps=2 format=3 uid="uid://bt54c4x0i0jjm"]

[ext_resource type="Script" path="res://scenes/Stats/Stats.gd" id="1_nan6q"]

[node name="Stats" type="Panel"]
custom_minimum_size = Vector2(256, 496)
offset_right = 256.0
offset_bottom = 496.0
script = ExtResource("1_nan6q")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 16.0
offset_top = 16.0
offset_right = 45.0
offset_bottom = 116.0

[node name="LevelLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Level:"

[node name="LevelValue" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "0
"

[node name="ExpLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Exp:"

[node name="ExpValue" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "0
"

[node name="HPLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "HP:"

[node name="HPValue" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "0
"

[node name="AttackPowerLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Attack Power:"

[node name="AttackPowerValue" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "0
"

[node name="AttackSpeedLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Attack Speed:"

[node name="AttackSpeedValue" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "0
"

[node name="DefenseLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Defense:"

[node name="DefenseValue" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "0
"
